--- a/src/connectOnline.fxml
+++ b/src/connectOnline.fxml
@@ -10,7 +10,7 @@
    <children>
       <ImageView fitHeight="540.0" fitWidth="960.0">
          <image>
-            <Image url="@../../../PongMenu/background.png" />
+            <Image url="@resources/background.png" />
          </image>
       </ImageView>
       <ImageView fx:id="connect" fitHeight="76.0" fitWidth="294.0" layoutX="46.0" layoutY="115.0">
@@ -28,7 +28,7 @@
             <Image url="@resources/or.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="name" fitHeight="76.0" fitWidth="200.0" layoutX="46.0" layoutY="232.0">
+      <ImageView fx:id="name" fitHeight="41.0" fitWidth="131.0" layoutX="46.0" layoutY="232.0">
          <image>
             <Image url="@resources/name.png" />
          </image>
@@ -38,13 +38,13 @@
             <Image url="@resources/connectOnline.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="port" fitHeight="76.0" fitWidth="200.0" layoutX="46.0" layoutY="345.0">
+      <ImageView fx:id="port" fitHeight="41.0" fitWidth="131.0" layoutX="46.0" layoutY="305.0">
          <image>
             <Image url="@resources/port.png" />
          </image>
       </ImageView>
-      <TextField fx:id="textName" layoutX="322.0" layoutY="232.0" prefHeight="76.0" />
-      <TextField fx:id="portText" layoutX="322.0" layoutY="345.0" prefHeight="76.0" />
+      <TextField fx:id="textName" layoutX="207.0" layoutY="224.0" prefHeight="57.0" prefWidth="236.0" />
+      <TextField fx:id="portText" layoutX="207.0" layoutY="297.0" prefHeight="57.0" prefWidth="236.0" />
       <ImageView fx:id="back" fitHeight="76.0" fitWidth="200.0" layoutX="290.0" layoutY="450.0">
          <image>
             <Image url="@resources/back.png" />
@@ -55,5 +55,23 @@
             <Image url="@resources/play.png" />
          </image>
       </ImageView>
+      <ImageView fitHeight="41.0" fitWidth="96.0" layoutX="35.0" layoutY="375.0">
+         <image>
+            <Image url="@resources/IP.png" />
+         </image>
+      </ImageView>
+      <TextField fx:id="portText1" layoutX="207.0" layoutY="367.0" prefHeight="57.0" prefWidth="236.0" />
+      <ImageView fx:id="name1" fitHeight="41.0" fitWidth="131.0" layoutX="555.0" layoutY="224.0">
+         <image>
+            <Image url="@resources/name.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="port1" fitHeight="41.0" fitWidth="131.0" layoutX="555.0" layoutY="297.0">
+         <image>
+            <Image url="@resources/port.png" />
+         </image>
+      </ImageView>
+      <TextField fx:id="textName1" layoutX="692.0" layoutY="216.0" prefHeight="57.0" prefWidth="236.0" />
+      <TextField fx:id="textName2" layoutX="692.0" layoutY="289.0" prefHeight="57.0" prefWidth="236.0" />
    </children>
 </AnchorPane>
