--- a/src/connectOnline.fxml
+++ b/src/connectOnline.fxml
@@ -28,7 +28,7 @@
             <Image url="@resources/or.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="name" fitHeight="41.0" fitWidth="131.0" layoutX="46.0" layoutY="232.0">
+      <ImageView fx:id="nameConnect" fitHeight="41.0" fitWidth="131.0" layoutX="46.0" layoutY="232.0">
          <image>
             <Image url="@resources/name.png" />
          </image>
@@ -38,13 +38,13 @@
             <Image url="@resources/connectOnline.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="port" fitHeight="41.0" fitWidth="131.0" layoutX="46.0" layoutY="305.0">
+      <ImageView fx:id="portConnect" fitHeight="41.0" fitWidth="131.0" layoutX="46.0" layoutY="305.0">
          <image>
             <Image url="@resources/port.png" />
          </image>
       </ImageView>
-      <TextField fx:id="textName" layoutX="207.0" layoutY="224.0" prefHeight="57.0" prefWidth="236.0" />
-      <TextField fx:id="portText" layoutX="207.0" layoutY="297.0" prefHeight="57.0" prefWidth="236.0" />
+      <TextField fx:id="textNameConnect" layoutX="207.0" layoutY="224.0" prefHeight="57.0" prefWidth="236.0" />
+      <TextField fx:id="portTextConnect" layoutX="207.0" layoutY="297.0" prefHeight="57.0" prefWidth="236.0" />
       <ImageView fx:id="back" fitHeight="76.0" fitWidth="200.0" layoutX="290.0" layoutY="450.0">
          <image>
             <Image url="@resources/back.png" />
@@ -55,23 +55,27 @@
             <Image url="@resources/play.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="41.0" fitWidth="96.0" layoutX="35.0" layoutY="375.0">
+      <ImageView fx:id="ipConnect" fitHeight="41.0" fitWidth="96.0" layoutX="35.0" layoutY="375.0">
          <image>
             <Image url="@resources/IP.png" />
          </image>
       </ImageView>
-      <TextField fx:id="portText1" layoutX="207.0" layoutY="367.0" prefHeight="57.0" prefWidth="236.0" />
-      <ImageView fx:id="name1" fitHeight="41.0" fitWidth="131.0" layoutX="555.0" layoutY="224.0">
+      <TextField fx:id="ipTextHost" layoutX="207.0" layoutY="367.0" prefHeight="57.0" prefWidth="236.0" />
+      <ImageView fx:id="nameHost" fitHeight="41.0" fitWidth="131.0" layoutX="555.0" layoutY="224.0">
          <image>
             <Image url="@resources/name.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="port1" fitHeight="41.0" fitWidth="131.0" layoutX="555.0" layoutY="297.0">
+      <ImageView fx:id="portHost" fitHeight="41.0" fitWidth="131.0" layoutX="555.0" layoutY="297.0">
          <image>
             <Image url="@resources/port.png" />
          </image>
       </ImageView>
-      <TextField fx:id="textName1" layoutX="692.0" layoutY="216.0" prefHeight="57.0" prefWidth="236.0" />
-      <TextField fx:id="textName2" layoutX="692.0" layoutY="289.0" prefHeight="57.0" prefWidth="236.0" />
+      <TextField fx:id="txtHostName" layoutX="692.0" layoutY="216.0" prefHeight="57.0" prefWidth="236.0" />
+      <TextField fx:id="txtHostPort" layoutX="692.0" layoutY="289.0" prefHeight="57.0" prefWidth="236.0" />
+      <Label fx:id="connectLabel" layoutX="46.0" layoutY="117.0" prefHeight="68.0" prefWidth="294.0" />
+      <Label fx:id="hostLabel" layoutX="707.0" layoutY="119.0" prefHeight="76.0" prefWidth="200.0" />
+      <Label fx:id="backLabel" layoutX="294.0" layoutY="454.0" prefHeight="68.0" prefWidth="192.0" />
+      <Label fx:id="playLabel" layoutX="520.0" layoutY="450.0" prefHeight="68.0" prefWidth="192.0" />
    </children>
 </AnchorPane>
