--- a/src/Menu/Menu.fxml
+++ b/src/Menu/Menu.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+
 <?import javafx.scene.image.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
@@ -9,52 +10,52 @@
    <children>
       <ImageView fitHeight="546.0" fitWidth="960.0">
          <image>
-            <Image url="@resources/background.png" />
+            <Image url="@../resources/background.png" />
          </image>
       </ImageView>
       <ImageView fx:id="head" fitHeight="164.0" fitWidth="422.0" layoutX="271.0">
          <image>
-            <Image url="@resources/header.png" />
+            <Image url="@../resources/header.png" />
          </image>
       </ImageView>
       <ImageView fx:id="smallHead" fitHeight="45.0" fitWidth="422.0" layoutX="271.0" layoutY="164.0">
          <image>
-            <Image url="@resources/HedaSub.png" />
+            <Image url="@../resources/HedaSub.png" />
          </image>
       </ImageView>
       <ImageView fx:id="newGame" fitHeight="39.0" fitWidth="200.0" layoutX="384.0" layoutY="230.0">
          <image>
-            <Image url="@resources/newGame.png" />
+            <Image url="@../resources/newGame.png" />
          </image>
       </ImageView>
       <ImageView fx:id="help" fitHeight="39.0" fitWidth="200.0" layoutX="384.0" layoutY="290.0">
          <image>
-            <Image url="@resources/help.png" />
+            <Image url="@../resources/help.png" />
          </image>
       </ImageView>
       <ImageView fx:id="settings" fitHeight="39.0" fitWidth="200.0" layoutX="384.0" layoutY="350.0">
          <image>
-            <Image url="@resources/settings.png" />
+            <Image url="@../resources/settings.png" />
          </image>  
       </ImageView>
       <ImageView fx:id="quit" fitHeight="76.0" fitWidth="200.0" layoutX="384.0" layoutY="450.0">
          <image>
-            <Image url="@resources/quit.png" />
+            <Image url="@../resources/quit.png" />
          </image>
       </ImageView>
       <ImageView fx:id="playonline" fitHeight="29.0" fitWidth="200.0" layoutX="384.0" layoutY="410.0">
          <image>
-            <Image url="@resources/playOnline.png" />
+            <Image url="@../resources/playOnline.png" />
          </image>
       </ImageView>
       <ImageView fx:id="keys" fitHeight="29.0" fitWidth="221.0" layoutX="70.0" layoutY="498.0">
          <image>
-            <Image url="@resources/select.png" />
+            <Image url="@../resources/select.png" />
          </image>
       </ImageView>
       <ImageView fx:id="confirm" fitHeight="29.0" fitWidth="200.0" layoutX="690.0" layoutY="498.0">
          <image>
-            <Image url="@resources/confirm.png" />
+            <Image url="@../resources/confirm.png" />
          </image>
       </ImageView>
    </children>
