--- a/src/Menu/twoPlayerMenu.fxml
+++ b/src/Menu/twoPlayerMenu.fxml
@@ -11,32 +11,32 @@
    <children>
       <ImageView fitHeight="540.0" fitWidth="960.0">
          <image>
-            <Image url="@resources/background.png" />
+            <Image url="@../resources/background.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="64.0" fitWidth="370.0" layoutX="277.0" layoutY="39.0">
          <image>
-            <Image url="@resources/pickName.png" />
+            <Image url="@../resources/pickName.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="31.0" fitWidth="200.0" layoutX="77.0" layoutY="156.0">
          <image>
-            <Image url="@resources/playerone.png" />
+            <Image url="@../resources/playerone.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="31.0" fitWidth="200.0" layoutX="647.0" layoutY="156.0">
          <image>
-            <Image url="@resources/playertwo.png" />
+            <Image url="@../resources/playertwo.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="76.0" fitWidth="200.0" layoutX="647.0" layoutY="380.0">
          <image>
-            <Image url="@resources/play.png" />
+            <Image url="@../resources/play.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="76.0" fitWidth="200.0" layoutX="77.0" layoutY="380.0">
          <image>
-            <Image url="@resources/back.png" />
+            <Image url="@../resources/back.png" />
          </image>
       </ImageView>
       <TextField layoutX="77.0" layoutY="203.0" prefHeight="54.0" prefWidth="200.0" />
