--- a/src/Menu/OnePlayerMenu.fxml
+++ b/src/Menu/OnePlayerMenu.fxml
@@ -6,43 +6,42 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="540.0" prefWidth="960.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<AnchorPane prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="546.0" fitWidth="967.0">
          <image>
-            <Image url="@resources/background.png" />
+            <Image url="@../resources/background.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="76.0" fitWidth="200.0" layoutX="212.0" layoutY="397.0">
+      <ImageView fx:id="back" fitHeight="76.0" fitWidth="200.0" layoutX="212.0" layoutY="397.0">
          <image>
-            <Image url="@resources/back.png" />
+            <Image url="@../resources/back.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="31.0" fitWidth="200.0" layoutX="171.0" layoutY="223.0">
          <image>
-            <Image url="@resources/playerone.png" />
+            <Image url="@../resources/playerone.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="76.0" fitWidth="200.0" layoutX="561.0" layoutY="397.0">
+      <ImageView fx:id="play" fitHeight="76.0" fitWidth="200.0" layoutX="561.0" layoutY="397.0">
          <image>
-            <Image url="@resources/play.png" />
+            <Image url="@../resources/play.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="130.0" fitWidth="696.0" layoutX="136.0" layoutY="14.0">
          <image>
-            <Image url="@resources/pickName.png" />
+            <Image url="@../resources/pickName.png" />
          </image>
       </ImageView>
-      <TextField layoutX="426.0" layoutY="210.0" />
+      <TextField fx:id="p1" layoutX="426.0" layoutY="210.0" />
       <ImageView fitHeight="20.0" fitWidth="200.0" layoutX="555.0" layoutY="498.0">
          <image>
-            <Image url="@resources/confirm.png" />
+            <Image url="@../resources/confirm.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="16.0" fitWidth="200.0" layoutX="212.0" layoutY="500.0">
          <image>
-            <Image url="@resources/select.png" />
+            <Image url="@../resources/select.png" />
          </image>
       </ImageView>
    </children>
