--- a/src/Menu/twoPlayerMenu.fxml
+++ b/src/Menu/twoPlayerMenu.fxml
@@ -6,40 +6,54 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="540.0" prefWidth="960.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<AnchorPane prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="540.0" fitWidth="960.0">
          <image>
-            <Image url="@resources/background.png" />
+            <Image url="@../resources/background.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="64.0" fitWidth="370.0" layoutX="277.0" layoutY="39.0">
          <image>
-            <Image url="@resources/pickName.png" />
+            <Image url="@../resources/pickName.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="31.0" fitWidth="200.0" layoutX="77.0" layoutY="156.0">
          <image>
-            <Image url="@resources/playerone.png" />
+            <Image url="@../resources/playerone.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="31.0" fitWidth="200.0" layoutX="647.0" layoutY="156.0">
          <image>
-            <Image url="@resources/playertwo.png" />
+            <Image url="@../resources/playertwo.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="76.0" fitWidth="200.0" layoutX="647.0" layoutY="380.0">
+      <ImageView fx:id="play" fitHeight="76.0" fitWidth="200.0" layoutX="647.0" layoutY="380.0">
          <image>
-            <Image url="@resources/play.png" />
+            <Image url="@../resources/play.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="76.0" fitWidth="200.0" layoutX="77.0" layoutY="380.0">
+      <ImageView fx:id="back" fitHeight="76.0" fitWidth="200.0" layoutX="77.0" layoutY="380.0">
          <image>
-            <Image url="@resources/back.png" />
+            <Image url="@../resources/back.png" />
          </image>
       </ImageView>
-      <TextField layoutX="77.0" layoutY="203.0" prefHeight="54.0" prefWidth="200.0" />
-      <TextField layoutX="654.0" layoutY="203.0" prefHeight="54.0" prefWidth="200.0" />
+      <TextField fx:id="p1" layoutX="77.0" layoutY="203.0" prefHeight="54.0" prefWidth="200.0" />
+      <TextField fx:id="p2" layoutX="654.0" layoutY="203.0" prefHeight="54.0" prefWidth="200.0" />
+      <ImageView fitHeight="42.0" fitWidth="334.0" layoutX="295.0" layoutY="292.0">
+         <image>
+            <Image url="@../resources/TAB.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="42.0" fitWidth="287.0" layoutX="77.0" layoutY="471.0">
+         <image>
+            <Image url="@../resources/select.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="42.0" fitWidth="287.0" layoutX="567.0" layoutY="471.0">
+         <image>
+            <Image url="@../resources/confirm.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
