--- a/src/Menu/Menu.fxml
+++ b/src/Menu/Menu.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.image.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
@@ -58,5 +57,6 @@
             <Image url="@../resources/confirm.png" />
          </image>
       </ImageView>
+      <Pane fx:id="newGameLabel" layoutX="372.0" layoutY="211.0" prefHeight="76.0" prefWidth="228.0" />
    </children>
 </AnchorPane>
