--- a/src/Menu/OnePlayerMenu.fxml
+++ b/src/Menu/OnePlayerMenu.fxml
@@ -44,5 +44,10 @@
             <Image url="@../resources/select.png" />
          </image>
       </ImageView>
+      <ImageView fitHeight="50.0" fitWidth="400.0" layoutX="284.0" layoutY="295.0">
+         <image>
+            <Image url="@../resources/TAB.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
